styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  font-family: "Helvetica Neue", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  font-size: 18px;
  -webkit-app-region: drag;
  caret-color: #3f67e0;
  @apply text-[#28282b] dark:text-[#f8fafc] bg-[#f8fafc] dark:bg-[#28282b];
}

*::selection {
  background: #3f67e0;
  color: #f8fafc;
}
*::-moz-selection {
  background: #3f67e0;
  color: #f8fafc;
}
*::-webkit-selection {
  background: #3f67e0;
  color: #f8fafc;
}

a,
button {
  cursor: default;
  -webkit-app-region: no-drag;
  @apply transition-all;
}

.no-drag {
  -webkit-app-region: no-drag;
}

.ProseMirror > * + * {
  margin-top: 0.75em;
}

.ProseMirror ul,
.ProseMirror ol {
  padding: 0 1rem;
}

.ProseMirror h1,
.ProseMirror h2,
.ProseMirror h3,
.ProseMirror h4,
.ProseMirror h5,
.ProseMirror h6 {
  line-height: 1.1;
}

.ProseMirror h1 {
  @apply text-4xl font-bold
}

.ProseMirror h2 {
  @apply text-2xl font-bold
}

.ProseMirror code {
  background-color: rgba(#616161, 0.1);
  color: #616161;
}

.ProseMirror pre {
  background: #0d0d0d;
  color: #fff;
  font-family: "JetBrainsMono", monospace;
  padding: 0.75rem 1rem;
  border-radius: 0.5rem;
}
.ProseMirror pre code {
  color: inherit;
  padding: 0;
  background: none;
  font-size: 0.8rem;
}

.ProseMirror img {
  max-width: 100%;
  height: auto;
}

.ProseMirror blockquote {
  padding-left: 1rem;
  margin-top: 2rem ;
  margin-bottom: 2rem ;
  @apply border-l-[3px] border-l-gray-300 dark:border-l-[#7d7d7d];
}

.ProseMirror hr {
  margin: 2rem 0;
  @apply border-t-[3px] border-t-gray-300 dark:border-t-[#7d7d7d];
}

.ProseMirror p.is-editor-empty:first-child::before {
  color: #909090;
  opacity: 0.25;
  content: attr(data-placeholder);
  float: left;
  height: 0;
  pointer-events: none;
}

ul[data-type="taskList"] {
  list-style: none;
  padding: 4px;
  @apply bg-slate-50 dark:bg-[#242427] rounded-md;
}

ul[data-type="taskList"] > p {
  margin: 0;
}

ul[data-type="taskList"] > li {
  display: flex;
  padding-top: 6px;
  padding-bottom: 6px;
}

ul[data-type="taskList"] > li > label {
  flex: 0 0 auto;
  margin-right: 0.5rem;
  user-select: none;
  padding-left: 8px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

ul[data-type="taskList"] > li > label > input {
  @apply w-6 h-6 !text-[#3f67e0] bg-gray-100 dark:bg-[#333338] rounded-lg border-gray-300 dark:border-[#45454d] accent-[#5275df];
}

ul[data-type="taskList"] > li[data-checked="true"] {
  @apply opacity-75 line-through;
}

ul[data-type="taskList"] > li > div {
  flex: 1 1 auto;
}

ul[data-placeholder] {
  color: #585858;
}

/* Categories FIXME */
.items {
  box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.05), 0px 10px 20px rgba(0, 0, 0, 0.1);
  font-size: 0.9rem;
  max-height: 200px;
  overflow: scroll;
  padding: 0.2rem;
  position: relative;
  border-radius: 0.4rem;
}

.item {
  background: transparent;
  border-radius: 0.2rem;
  display: block;
  margin: 0;
  padding: 0.2rem 0.4rem;
  text-align: left;
  width: 100%;
}

.item.is-selected {
  background-color: #3f67e0;
}

.mention {
  border-radius: 0.4rem;
  background-color: #3f67e0;
  box-decoration-break: clone;
  padding: 0.1rem 0.3rem;
}


/* CODE */
.hljs-comment,
    .hljs-quote {
      color: #616161;
    }

    .hljs-variable,
    .hljs-template-variable,
    .hljs-attribute,
    .hljs-tag,
    .hljs-name,
    .hljs-regexp,
    .hljs-link,
    .hljs-name,
    .hljs-selector-id,
    .hljs-selector-class {
      color: #f98181;
    }

    .hljs-number,
    .hljs-meta,
    .hljs-built_in,
    .hljs-builtin-name,
    .hljs-literal,
    .hljs-type,
    .hljs-params {
      color: #fbbc88;
    }

    .hljs-string,
    .hljs-symbol,
    .hljs-bullet {
      color: #b9f18d;
    }

    .hljs-title,
    .hljs-section {
      color: #faf594;
    }

    .hljs-keyword,
    .hljs-selector-tag {
      color: #70cff8;
    }

    .hljs-emphasis {
      font-style: italic;
    }

    .hljs-strong {
      font-weight: 700;
    }

